[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Dialogue Node/Dialogue Node.gd" type="Script" id=1]

[node name="Dialogue Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
script = ExtResource( 1 )

[connection signal="focus_entered" from="." to="." method="_on_Dialogue_Node_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Dialogue_Node_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_Dialogue_Node_gui_input"]
